--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
 
   </head>
   <body>
-      <div id="header">
+      <!-- <div id="header">
         <nav>
           <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
         </nav>
-      </div><!-- end header -->
+      </div> -->
 
     <div class="wrapper">
 
