--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,8 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
+        <h2>{{post.title}}</h2>
+        
         {{ content }}
    
       </section>
