--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
-        <h2>{{post.title}}</h2>
+        <h2>{{title}}</h2>
         
         {{ content }}
    
