--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@
         </div>
 
         <h2>{{page.title}}</h2>
-        <h5>File name: <code>{{page.name}}</code></h5>
+        <h5>File name: {{page.name}}</h5>
         
         {{ content }}
    
