--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@
         </div>
 
         <h2>{{page.title}}</h2>
-        <h6>{{page.date}}</h6>
+        <h6>{{ page.date | date_to_long_string }}</h6>
         
         {{ content }}
    
