--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,8 +35,8 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
-        <h2>{{page.title}}</h2>
-        <h6>{{ page.date | date_to_long_string }}</h6>
+        <h1>{{page.title}}</h1>
+        <h5 color="grey">{{ page.date | date_to_long_string }}</h5>
         
         {{ content }}
    
