--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@
         </div>
 
         <h1>{{page.title}}</h1>
-        <h5 color="grey">{{ page.date | date_to_long_string }}</h5>
+        <h5><font color="grey">{{ page.date | date_to_long_string }}</font></h5>
         
         {{ content }}
    
