--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -40,8 +40,8 @@
         <ul>
           {% for post in site.posts %}
             <li>
-              <h3><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></h3>
-              <h4><font color="grey">[{{ post.date | date_to_long_string }}]</font><h4>
+              <h3><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a> — <font color="grey">[{{ post.date | date_to_long_string }}]</font></h3>
+              <h4><h4>
             </li>
           {% endfor %}
         </ul>
