--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -40,7 +40,7 @@
         <ul>
           {% for post in site.posts %}
             <li>
-              <h3><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a><font size="-3" color="grey"> — [{{ post.date | date_to_long_string }}]</font></h3>
+              <h3><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a><font size="-1" color="grey"><em> — [{{ post.date | date_to_long_string }}]</em></font></h3>
               <hr>
             </li>
           {% endfor %}
