--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1><a href="https://sandaidev.github.io/sandailog/">{{ site.title | default: site.github.repository_name }}</a></h1>
+          <h1><a href="https://sandaidev.github.io/ChillerTech/">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">Erwan Egasse</a></span>
