--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,8 +31,8 @@
           <h1><a href="https://sandaidev.github.io/ChillerTech/">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
+          <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">Erwan Egasse</a></span>
+          <span class="credits right">Theme courtesy of <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
         <h1>{{page.title}}</h1>
