--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
         </nav>
       </div> -->
 
-    <div class="wrapper">
+    <div class="wrapper" style="width: 55%;">
 
       <section>
         <div id="title">
