--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,17 @@
         </nav>
       </div> -->
 
+    <style>
+      .section {
+        max-width: none;
+      }
+      
+      .wrapper {
+       max-width: 60%; 
+      }
+    </style>
+    
+    
     <div class="wrapper" style="width: 55%;">
 
       <section>
