Fix index post URL linking

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="card-footer">
-                    <a class="btn btn-outline-info" href="https://github.com/Sandaidev/Projet-Site" role="button">Read on <i class="bi bi-arrow-right"></i></a>
+                    <a class="btn btn-outline-info" href="{{ site.baseurl}}{{ post.url }}" role="button">Read on <i class="bi bi-arrow-right"></i></a>
                 </div>
 
                 <div class="card-footer">
