--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
                 <a class="nav-link" href="{{ site.baseurl }}/posts.html">Posts</a>
                 <a class="nav-link" href="#">Tags</a>
-                <a class="nav-link ms-auto" href="#">About Me</a>
+                <a class="nav-link ms-auto" href="https://sandaidev.github.io/">About Me</a>
             </div>
         </div>
     </div>
