Fix post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
 <body>
 {% include header.html %}
 
-<div class="container border border-light-50 rounded p-3 bg-dark">
+<div class="container rounded p-3 bg-dark">
     <div class="text-wrap text-center badge bg-light text-dark fs-3 mb-3">Post ⁓ {{ page.title }}</div>
 
     <p class="text-muted">
